<resources>
    <string name="app_name">Lec2Demo</string>
    <string name="txtTitle">My Recipes</string>
    <string name="txtTitle2">Bruschetta Recipe</string>
    <string name="Test">TestValue</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtItem1">4 plum tomatoes</string>
    <string name="txtItem2">6 basil leaves</string>
    <string name="txtItem3">3 garlic cloves, chopped</string>
    <string name="txtItem4">3 TB olive oil</string>
    <string name="txtDirections">Directions</string>
    <string name="txtMix">"Combine the ingredients and add salt to taste. Top French bread slices with mixture."</string>
    <string name="btnViewRecipe">VIEW RECIPE</string>
    <string name="imgDesc">Bruschetta</string>
    <string name="imageDesc">Bruschetta.</string>
</resources>